# monarch-gene-mapping

./: .gitignore  GeneMap.ipynb  Jenkinsfile  README.md  download.yaml  panther_dangling_edges.tsv  pyproject.toml  test.py
.github/workflows/: generate-mapping.yml  test.yaml  test.yml
gene-mapping/: gene_mapping.py
monarch_gene_mapping/: cli_utils.py  download.yaml  gene_mapping.py  main.py  preprocess.py  uniprot_idmapping_preprocess.py
script/: analyse_mappings.py
scripts/: analyse_dangling_edges.py
tests/: test_cli_mapping_utils.py  test_null_mappings.py
