[tool.poetry]
name = "monarch_gene_mapping"
version = "0.1.6"
description = "Project for mapping source namespaces to preffered namespaces in Monarch Initiative"
authors = [
    "Tim Putman <putmantime@users.noreply.github.com>",
    "Kevin Schaper <kevinschaper@gmail.com>",
    "The Monarch Initiative <info@monarchinitiative.org>"
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
kghub-downloader = "^0.1.14"
click = "8.0.4"
typer = "0.4"
ipython = "^8.5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gene-mapping = "monarch_gene_mapping.main:typer_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
