[tool.poetry]
name = "monarch_gene_mapping"
version = "0.1.6"
description = "Project for mapping source namespaces to preffered namespaces in Monarch Initiative"
authors = [
    "Tim Putman <putmantime@users.noreply.github.com>",
    "Kevin Schaper <kevinschaper@gmail.com>",
    "Glass Elsarboukh <glass.ships@outlook.com>",
    "The Monarch Initiative <info@monarchinitiative.org>"
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
kghub-downloader = "^0.3.4"
typer = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
gene-mapping = "monarch_gene_mapping.main:typer_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
